--- a/templates/naotp_input.html
+++ b/templates/naotp_input.html
@@ -1,16 +1,14 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome To Vaulta Digital</title>
+  <title>2FA Setup</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background-color: #838383;
+      background-color: #a6a6a6;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       color: #fff;
     }
@@ -32,17 +30,10 @@
       margin-right: 10px;
     }
 
-    .logo span {
-      font-weight: bold;
-      font-size: 22px;
-      color: #fff;
-    }
-
     h1 {
       font-size: 50px;
       margin-bottom: 25px;
       font-weight: 900;
-      color: white;
     }
 
     .highlight {
@@ -54,24 +45,30 @@
       font-size: 16px;
       margin-bottom: 30px;
       line-height: 1.5;
-      color: white;
     }
 
-    .btn {
-      display: inline-block;
-      background-color: orange;
-      color: white;
-      font-weight: 900;
-      padding: 16px 31px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      font-size: 16px;
-      transition: background-color 0.3s ease;
+    .otp-container {
+      display: flex;
+      justify-content: center;
+      margin: 30px 0;
     }
 
-    .btn:hover {
-      background-color: orange;
+    .otp-input {
+      width: 40px;
+      height: 40px;
+      font-size: 28px;
+      text-align: center;
+      margin-left:10px;
+      margin-right:10px;
+      border: 2px solid #ffb43a;
+      background-color: transparent;
+      color: #fff;
+      border-radius: 8px;
+      outline: none;
+    }
+
+    .otp-input:focus {
+      border-color: #fff;
     }
 
     .support {
@@ -106,10 +103,10 @@
       color: orange;
     }
 
-    .footer-text{
-        margin-bottom: 10px;
-        line-height: 1.5;
-        font-size:9px
+    .footer-text {
+      margin-bottom: 10px;
+      line-height: 1.5;
+      font-size: 9px;
     }
 
     .address {
@@ -120,21 +117,23 @@
 </head>
 <body>
 
-  <div class="container" style="background-color: #000;">
-    <div class="logo">
-      <img src="https://firebasestorage.googleapis.com/v0/b/myfirstproject-721e6.firebasestorage.app/o/VAULTA%20LOGO.png?alt=media&token=7e0ac92e-3009-4d61-8dc9-7bda435fe0c6" alt="Vaulta Logo" />
+  <div class="container">
+    <!-- <div class="logo">
+      <img src="https://i.imgur.com/qzXPft1.png" alt="Vaulta Logo" />
+    </div> -->
+
+    <h1>Two-Factor Authentication Code</h1>
+
+    <p style="margin-bottom:5px; font-weight:800; font-size:18px"><strong>Hey <span class="highlight">{{name}}</span>,</strong></p>
+    <p style="margin-top:10px; font-weight:800; font-size:18px; margin-bottom:15px; line-height:1.3">For extra security, enter your 2FA code below to continue.</p>
+
+    <div class="otp-container">
+      {{ otp }}
     </div>
-
-    <div>
-
-    <h1>Hello {{ name }}</h1>
-
-    <p style="margin-top:10px; font-weight:800; font-size:18px; margin-bottom:15px; line-height:1.3; color: white;">Your request to register for Vaulta Digital has been received and is being processed. Someone from support would reach out regarding your next steps.</p>
 
     <p class="support">If you need help, visit or contact the <a href="#">support center</a>.</p>
 
     <p style="font-size:16px; margin-bottom:0px">Thanks<br>The Vaulta Digital Assets Team</p>
-    </div>
 
     <div class="footer">
       <p class="footer-text">
