--- a/templates/otp.html
+++ b/templates/otp.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome To Vaulta Digital</title>
+  <title>2FA Setup</title>
   <style>
     body {
       margin: 0;
@@ -127,9 +127,12 @@
 
     <div>
 
-    <h1>Hello {{ name }}</h1>
+    <h1>Two Factor Authentication</h1>
 
-    <p style="margin-top:10px; font-weight:800; font-size:18px; margin-bottom:15px; line-height:1.3; color: white;">Your request to register for Vaulta Digital has been received and is being processed. Someone from support would reach out regarding your next steps.</p>
+    <p style="margin-bottom:5px; font-weight:800; font-size:18px"><strong>Hey <span class="highlight">{{ name }}</span>,</strong></p>
+    <p style="margin-top:10px; font-weight:800; font-size:18px; margin-bottom:15px; line-height:1.3; color: white;">Please enter this OTP code in the form to authenticate and enter your account.</p>
+
+    <div class="btn" style="color: white;">{{ otp }}</div>
 
     <p class="support">If you need help, visit or contact the <a href="#">support center</a>.</p>
 
