upload the new data

--- a/templates/payment_created.html
+++ b/templates/payment_created.html
@@ -161,9 +161,7 @@
 
     <div class="footer">
       <p class="footer-text">
-        Vaulta Digital Assets Ltd. is a financial technology company incorporated in Ghana
-        (registration no. CS054920325), regulated by the Bank of Ghana’s Office of Fintech and Innovation,
-        and operating in accordance with applicable financial services regulations in Ghana and emerging African markets.
+        Vaulta Digital Assets Ltd. is a financial technology company incorporated in Ghana (registration no. CS054920325), operating under the guidance of the Bank of Ghana’s Office of Fintech and Innovation, and in accordance with applicable frameworks in Ghana and emerging African markets.
       </p>
       <p class="footer-text">
         95 Freetown Avenue, East Legon<br>
